Removing layout bugs

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -900,6 +900,11 @@ h2.title {
 
 
 .productinfo p{
+  white-space: nowrap; /* Запрещаем перенос строк */
+  overflow: hidden; /* Обрезаем все, что не помещается в область */
+  padding: 5px; /* Поля вокруг текста */
+  text-overflow: ellipsis; /* точки */
+
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
